# graphmatch

./: .gitignore  COPYRIGHT  LICENSE  Makefile  README.md  build.py  pyproject.toml
graphmatch/embedding/: deepwalk.pyx
graphmatch/ged/: abstract_graph_edit_dist.pyx  bipartite_graph_matching_2.pyx  hausdorff_edit_distance.pyx
graphmatch/helpers/: general.pyx
munkres/: __init__.py  generate_cost.py  kldiv.py  munkres.pyx
munkres/cpp/: Munkres.cpp  Munkres.h
test/: gmatch4py_performance_test.py  test.py  test_munkres.py
