[tool.poetry]
name = "graphmatch"
version = "0.1.0"
description = "A graph matching library for Python"
authors = ["Mirko Lenz <mirko@mirkolenz.com>"]
license = "MIT"
include = [
    "graphmatch/**/*.so",
    "graphmatch/**/*.py",
    "munkres/**/*.so",
    "munkres/**/*.py",
]
exclude = [
    "graphmatch/**/*.pyx",
    "graphmatch/**/*.pxd",
    "munkres/**/*.pyx",
    "munkres/**/*.pxd",
    "munkres/**/*.cpp",
    "munkres/**/*.h",
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
decorator = "^5.1.1"
scipy = "^1.8.1"
networkx = "2.8.5"
numpy = "^1.23.1"
scikit-learn = "^1.1.1"
tqdm = "^4.64.0"
pandas = "^1.4.3"
joblib = "^1.1.0"
gensim = "^4.2.0"
psutil = "^5.9.1"
Cython = "^0.29.30"

[tool.poetry.dev-dependencies]
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy", "setuptools"]
build-backend = "poetry.core.masonry.api"
